# feec-workbench-daemon

./: .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  message_lang.csv  pyproject.toml
docs/: README.md
hid-emulator/: Dockerfile  hid-emulator.py
mongodb-local/: init.js
src/: _employee_router.py  _logging.py  _unit_router.py  _workbench_router.py  app.py  dependencies.py
src/feecc_workbench/: Camera.py  Employee.py  Messenger.py  ProductionStage.py  Singleton.py  Types.py  Unit.py  WorkBench.py  _db_utils.py  _label_generation.py  config.py  database.py  exceptions.py  ipfs.py  message_lang.csv  metrics.py  models.py  passport_generator.py  printer.py  robonomics.py  states.py  translation.py  unit_utils.py  utils.py
tests/: conftest.py  test_api.py
unit-passports/: unit-passport-cdf810df189247a29b931c89d79f5118.yaml
